Fix HTML structure and add project links

--- a/index.html
+++ b/index.html
@@ -119,16 +119,22 @@
                     <article class="work-card">
                         <h3>Website Redesign Project</h3>
                         <p>Redesigned an outdated website to improve UI, speed, and mobile experience.</p>
+                        <a href="https://final-portfolio-omega-rosy.vercel.app/" target="_blank" rel="noopener">View
+                            Project</a>
                     </article>
 
                     <article class="work-card">
                         <h3>Creative Portfolio</h3>
                         <p>Minimal design with strong personal branding.</p>
+                        <a href="https://final-portfolio-website-phi.vercel.app/" target="_blank" rel="noopener">View
+                            Project</a>
                     </article>
 
                     <article class="work-card">
                         <h3>Business Website</h3>
                         <p>Service-focused layout with clear CTAs.</p>
+                        <a href="https://vicky-69cyber.github.io/novatech-digital-agency/" target="_blank"
+                            rel="noopener">View Project</a>
                     </article>
                 </div>
             </div>
@@ -177,6 +183,7 @@
                     <input type="email" id="email" placeholder="Your Email" required />
                     <textarea id="message" placeholder="Your Message" required></textarea>
                     <button type="submit">Send Message</button>
+
                 </form>
 
                 <p id="formStatus"></p>
