Add Weather App section to index.html
Added a new weather application section to showcase a responsive weather app that fetches real-time data.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- BASIC SEO -->
+    <!-- SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
@@ -116,26 +116,45 @@
                 </p>
 
                 <div class="grid">
+
                     <article class="work-card">
                         <h3>Website Redesign Project</h3>
                         <p>Redesigned an outdated website to improve UI, speed, and mobile experience.</p>
-                        <a href="https://final-portfolio-omega-rosy.vercel.app/" target="_blank" rel="noopener">View
-                            Project</a>
+                        <a href="https://final-portfolio-omega-rosy.vercel.app/" target="_blank" rel="noopener">
+                            View Project
+                        </a>
                     </article>
 
                     <article class="work-card">
                         <h3>Creative Portfolio</h3>
                         <p>Minimal design with strong personal branding.</p>
-                        <a href="https://final-portfolio-website-phi.vercel.app/" target="_blank" rel="noopener">View
-                            Project</a>
+                        <a href="https://final-portfolio-website-phi.vercel.app/" target="_blank" rel="noopener">
+                            View Project
+                        </a>
                     </article>
 
                     <article class="work-card">
                         <h3>Business Website</h3>
                         <p>Service-focused layout with clear CTAs.</p>
                         <a href="https://vicky-69cyber.github.io/novatech-digital-agency/" target="_blank"
-                            rel="noopener">View Project</a>
+                            rel="noopener">
+                            View Project
+                        </a>
                     </article>
+
+                    <!-- ✅ WEATHER APP ADDED -->
+                    <article class="work-card">
+                        <h3>Weather App</h3>
+                        <p>
+                            A responsive weather application built using HTML, CSS, and Vanilla JavaScript.
+                            It fetches real-time weather data from an external API and displays temperature,
+                            humidity, wind speed, and weather conditions.
+                        </p>
+                        <a href="https://vicky-69cyber.github.io/Weather-App/" target="_blank" rel="noopener">
+                            View Project
+                        </a>
+                    </article>
+
                 </div>
             </div>
         </section>
@@ -175,15 +194,14 @@
         <!-- CONTACT -->
         <section id="contact" class="section contact">
             <div class="container">
-                <h2>Let’s Build Your Website</h2>
-                <p class="section-desc">Send me a message and I’ll reply fast</p>
+                <h2>Let's Build Your Website</h2>
+                <p class="section-desc">Send me a message and I'll reply fast</p>
 
                 <form id="contactForm" class="contact-form">
                     <input type="text" id="name" placeholder="Your Name" required />
                     <input type="email" id="email" placeholder="Your Email" required />
                     <textarea id="message" placeholder="Your Message" required></textarea>
                     <button type="submit">Send Message</button>
-
                 </form>
 
                 <p id="formStatus"></p>
@@ -196,7 +214,6 @@
         <p>© <span id="year"></span> Vicky — Freelance Web Developer</p>
     </footer>
 
-    <!-- IMPORTANT: module for Firebase -->
     <script type="module" src="script.js"></script>
 </body>
 
